einstellung_derive/src/trybuild_tests/validate_wrong_return_type.stderr
error[E0308]: mismatched types
 --> src/trybuild_tests/validate_wrong_return_type.rs
  |
  | #[derive(Config)]
  |          ------ expected due to this
  | struct ServerConfig {
  |     #[config(validate = validate_port)]
  |                         ^^^^^^^^^^^^^ expected fn pointer, found fn item
  |
  = note: expected fn pointer `for<'a> fn(&'a u16) -> Result<(), Box<(dyn StdError + 'static)>>`
                found fn item `for<'a> fn(&'a u16) -> bool {validate_port}`

error[E0308]: mismatched types
 --> src/trybuild_tests/validate_wrong_return_type.rs
  |
  |     port: u16,
  |           ^^^ expected `bool`, found `Result<_, _>`
  |
  = note: expected type `bool`
             found enum `Result<_, _>`
